# -Task-Check-in

./: .gitignore  CHANGELOG.md  DESIGN.md  MIGRATION_AUDIT.md  README.md  RELEASE.md  UI_REDESIGN_PLAN.md  UI_VISUAL_UPGRADE_PLAN.md  UPDATE_TEST.md  VISUAL_BEFORE_AFTER.md  VISUAL_GAP_AUDIT.md  index.html  package-lock.json  package.json  release-metadata.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: enrich-updater-json.mjs  release-check.mjs  sync-version.mjs
src/: App.tsx  components.tsx  db.ts  logic.test.ts  logic.ts  main.tsx  store.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  router.tsx  safeMode.ts
src/components/layout/: AppShell.tsx  PageHeader.tsx  safeMode.css
src/components/ui/: Button.tsx  Dialog.tsx  LegacyMigrationDialog.tsx  OnboardingDialog.tsx  PwaUpdate.tsx  RecoveryState.tsx  RouteErrorBoundary.tsx  States.tsx  (+2 more)
src/db/: database.ts  defaults.ts  migrations.ts  recovery.ts  seed.ts
src/lib/: date.ts  id.ts
src/pages/: CalendarPage.tsx  DashboardPage.tsx  SettingsPage.tsx  TasksPage.tsx  TodayPage.tsx  dashboardVisuals.css  todayVisuals.css
src/stores/: appStore.ts
src/styles/: visualAtmosphere.css  workspaceVisuals.css
src/tests/: ai.test.ts  app-recovery.test.tsx  backup.test.ts  canonicalDailySummary.test.ts  data-upgrade.test.ts  migration.test.ts  statistics.test.ts  task-drawer-focus.test.tsx
src/types/: index.ts
(+47 files in other folders)
