[package]
name = "summerflow"
version = "0.1.3"
description = "Local First personal study tracker and daily check-in application"
authors = ["SummerFlow Contributors"]
repository = "https://github.com/laonanren52-cell/-Task-Check-in"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "summerflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
